--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hookly",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Manage your Discord server's webhooks via Slash Commands",
   "main": "index.ts",
   "scripts": {
@@ -11,7 +11,7 @@
   "dependencies": {
     "@discordjs/builders": "0.11.0",
     "@discordjs/rest": "^0.2.0-canary.0",
-    "@milanmdev/discordjs-button-pagination": "^1.0.0",
+    "@milanmdev/discordjs-button-pagination": "1.0.2",
     "ascii-table": "0.0.9",
     "chalk": "^4.1.2",
     "cross-env": "^7.0.3",
