fix tsconfig file thingy

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,6 @@
 {
-  "compileOnSave": true,
+  "extends": "@augu/tsconfig",
   "compilerOptions": {
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "lib": ["es5", "es2015", "es2017"],
-    "baseUrl": "./",
     "paths": {
       "@types": ["./types/index"]
     }
